--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,12 @@
 <body>
   <div class="nav">
       <ul>
-        <li class="name">Brad Chapin, web developer</li>
+        <li>Brad Chapin, web developer</li>
         <li><a href="index.html">Main</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-    <h1>About me:</h1>
+    <h1>Contact me:</h1>
 </body>
 </html>
