--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
   <div class="nav">
       <ul>
-        <li>Brad Chapin, web developer</li>
+        <li><a href="index.html">Brad Chapin, web developer</a></li>
         <li><a href="index.html">Main</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
