--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
   <div class="nav">
       <ul>
-        <li class="name">Brad Chapin, web developer</li>
+        <li><a href="index.html">Brad Chapin, web developer</a></li>
         <li><a href="index.html">Main</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <h1>About me:</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a nibh dolor. Nullam sollicitudin interdum arcu. Nullam accumsan quam vitae porttitor molestie. Aliquam quis ullamcorper tortor. Nullam eu auctor dui, ac luctus sapien. Praesent vehicula, tortor eu vestibulum lobortis, erat leo tristique sapien, rutrum volutpat velit quam a ipsum. Donec ipsum enim, tristique ut egestas ut, maximus a metus. Aliquam semper nibh ac sapien dapibus, ut aliquet neque maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <p>Ut eget faucibus nisi. Donec malesuada vestibulum ex sed dignissim. Nulla vulputate risus cursus orci volutpat accumsan ac nec nulla. Etiam dictum, neque a consectetur mollis, dui lacus euismod risus, vel malesuada orci nunc at nisl. Aliquam sodales urna et massa molestie lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras sit amet nisi id purus eleifend eleifend sed eu quam. Sed volutpat odio eu nulla ornare, iaculis aliquam nulla efficitur. Maecenas tincidunt facilisis sapien, quis maximus mi.</p>
 </body>
 </html>
