--- a/projects.html
+++ b/projects.html
@@ -17,5 +17,21 @@
       </ul>
     </div>
     <h1>My past work:</h1>
+    <div>
+      <h4><a class="proj" href="http://daky-in-monsterland.surge.sh">Daky In Monsterland</a></h4>
+    </div>
+    <p>Daky in Monsterland was my capstone project for the web development immersive I went through at the <a href="https://www.galvanize.com/boulder" class="proj">Galvanize campus in Boulder, CO.</a> It's a reimagining of a game from the mid 80's called <a href="https://en.wikipedia.org/wiki/Robots_(computer_game)" class="proj">Daleks</a>, which I plaued on the original Mac as a kid. It was a two week solo project, which included the stipulation that it involve at least one unfamiliar technology- that is, one technology that I had never used before. My unfamiliar tech was <a href="https://phaser.io/" class="proj">Phaser</a>, which is a game development engine. I also used animate.css, skeleton.css, and jQuery in building the game, and it features the art of <a href="https://beckyschapin.myportfolio.com/" class="proj">Becky S. Chapin.</a></p>
+    <div>
+      <h4><a class="proj" href="http://ship-captain-crew.surge.sh">Ship, Captain, and Crew</a></h4>
+    </div>
+    <p>Ship, Captain, and Crew was my first quarter solo project at Galvanize (see above). Like the capstone project, this project also had a special requirement: it had to use an external API call. Ship, Captain, and Crew is pirate-themed version of the dice game of the same name, and it includes an English to Pirate translator. The game was made in one week, using the <a href="http://materializecss.com/" class="proj">Materialize framework</a> and jQuery. </p>
+    <div>
+      <h4><a class="proj" href="http://pick-my-lunch.surge.sh">Pick My Lunch</a></h4>
+    </div>
+    <p>Pick My Lunch is a seat-of-my-pants app I made for some folks who often have lunch together, but who can never decide what they want. For now, it's very simple- you type in a list of choices, and it picks on for you at random. I hope to improve it at some point to use an API call to find nearby places to eat, and pick from that list, saving the users even more time.</p>
+    <div>
+      <h4><a href="http://handy-weather.surge.sh" class="proj">Handy Weather</a></h4>
+    </div>
+    <p>Handy Weather was created as a code challenge for a developer job I applied for. While I unfortunately didn't get the job, it was a really good exercise in debugging and trouble-shooting, and a good reminder of how important the fundamentals of code are.</p>
 </body>
 </html>
