--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,10 @@
       </ul>
     </div>
     <h1>Contact me:</h1>
-    <div>
-      <a href="https://github.com/Brad-Chapin"><img src="assets/github.svg" alt="github icon"></a>
-    </div>
-    <div>
-      <a href="mailto:bradschapin@gmail.com"><img src="assets/gmail.png" alt="gmail icon"></a>
-    </div>
-    <div>
-      <a href="https://www.linkedin.com/in/brad-chapin/"><img src="assets/linkedin.svg" alt="linkedin icon"></a>
+    <div class="contact">
+      <a href="https://github.com/Brad-Chapin"><img class="social" src="assets/github.svg" alt="github icon"></a>
+      <a href="mailto:bradschapin@gmail.com"><img class="social" src="assets/gmail.png" alt="gmail icon"></a>
+      <a href="https://www.linkedin.com/in/brad-chapin/"><img class="social" src="assets/linkedin.svg" alt="linkedin icon"></a>
     </div>
 </body>
 </html>
