--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="contact">
       <a href="https://github.com/Brad-Chapin"><img class="social" src="assets/github.svg" alt="github icon"></a>
       <a href="mailto:bradschapin@gmail.com"><img class="social" src="assets/gmail.png" alt="gmail icon"></a>
-      <a href="https://www.linkedin.com/in/brad-chapin/"><img class="social" src="assets/linkedin.svg" alt="linkedin icon"></a>
+      <a href="https://www.linkedin.com/in/brad-chapin/"><img class="social" src="assets/linkedin.png" alt="linkedin icon"></a>
     </div>
 </body>
 </html>
