updated the about me section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       </ul>
     </div>
     <h1>About me:</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a nibh dolor. Nullam sollicitudin interdum arcu. Nullam accumsan quam vitae porttitor molestie. Aliquam quis ullamcorper tortor. Nullam eu auctor dui, ac luctus sapien. Praesent vehicula, tortor eu vestibulum lobortis, erat leo tristique sapien, rutrum volutpat velit quam a ipsum. Donec ipsum enim, tristique ut egestas ut, maximus a metus. Aliquam semper nibh ac sapien dapibus, ut aliquet neque maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <p>Ut eget faucibus nisi. Donec malesuada vestibulum ex sed dignissim. Nulla vulputate risus cursus orci volutpat accumsan ac nec nulla. Etiam dictum, neque a consectetur mollis, dui lacus euismod risus, vel malesuada orci nunc at nisl. Aliquam sodales urna et massa molestie lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras sit amet nisi id purus eleifend eleifend sed eu quam. Sed volutpat odio eu nulla ornare, iaculis aliquam nulla efficitur. Maecenas tincidunt facilisis sapien, quis maximus mi.</p>
+    <p>My name is Brad Chapin, and I'm a web developer.</p>
+    <p>I graduated from the Galvanize Boulder web development immersive in 2017 (G36 for any of you other G-schoolers), and I am currently looking for my first professional role as a developer.</p>
+    <p>I have a strong passion for games and game development, and ultimately, I would love to find a role in a game company, helping put out awesome games. Beyond that, I have over twenty years of customer service experience over a broad array of industries, so I feel that I have a pretty good grip on what end users want out of their products.</p>
+    <p>I find that one of the best ways to learn is to teach, so if you're reading this, and thinking, "Hey, I'd like to learn to code!" then please, by all means, reach out to me; I'll share what I know, help look for what I don't, and we can learn together.</p>
+    <h1>Happy Coding.</h1>
 </body>
 </html>
