--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="nav">
       <ul>
-        <img src="assets/bsclogo.jpg" class="logo" alt="my logo">
+        <!-- <img src="assets/bsclogo.jpg" class="logo" alt="my logo"> -->
         <li><a href="index.html">Brad Chapin, web developer</a></li>
         <li><a href="index.html">Main</a></li>
         <li><a href="projects.html">Projects</a></li>
