--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="nav">
       <ul>
         <!-- <img src="assets/bsclogo.jpg" class="logo" alt="my logo"> -->
-        <li><a href="index.html">Brad Chapin, web developer</a></li>
+        <li><a href="index.html">Brad Chapin</a></li>
         <li><a href="index.html">Main</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
