added resume page

--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
   <div class="nav">
       <ul>
         <li><a href="index.html">Brad Chapin</a></li>
-        <li><a href="index.html">Main</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="https://drive.google.com/file/d/12d-s5B946VwabFay8nKyO8MA0hGEyTdv/view?ths=true">Resume'</a></li>
       </ul>
     </div>
     <h1>Contact me:</h1>
