--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <ul>
         <!-- <img src="assets/bsclogo.jpg" class="logo" alt="my logo"> -->
         <li><a href="index.html">Brad Chapin</a></li>
-        <li><a href="index.html">Main</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="https://drive.google.com/drive/folders/1oXUpy38wj5zHhYqcgRplBKd2C2eOcf4u">Resume'</a></li>
       </ul>
     </div>
     <h1>About me:</h1>
