--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="index.html">Brad Chapin</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="https://drive.google.com/drive/folders/1oXUpy38wj5zHhYqcgRplBKd2C2eOcf4u">Resume'</a></li>
+        <li><a target="_blank" href="https://drive.google.com/file/d/12d-s5B946VwabFay8nKyO8MA0hGEyTdv/view?ths=true">Resume'</a></li>
       </ul>
     </div>
     <h1>About me:</h1>
