--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <div class="nav">
       <ul>
-        <!-- <img src="assets/bsclogo.jpg" class="logo" alt="my logo"> -->
         <li><a href="index.html">Brad Chapin</a></li>
         <li><a href="projects.html">Projects</a></li>
+        <li><img src="assets/bsclogo.jpg" class="logo" alt="my logo"></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a target="_blank" href="https://drive.google.com/file/d/1D1pQlnl7sZGTYRErt6LwCPf0T6A1iiiE/view?ths=true">Resume'</a></li>
       </ul>
