--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
     </div>
     <h1>Contact me:</h1>
     <div class="contact">
-      <a href="https://github.com/Brad-Chapin"><img class="social" src="assets/github.svg" alt="github icon"></a>
+      <a target="_blank" href="https://github.com/Brad-Chapin"><img class="social" src="assets/github.svg" alt="github icon"></a>
       <a href="mailto:bradschapin@gmail.com"><img class="social" src="assets/gmail.png" alt="gmail icon"></a>
-      <a href="https://www.linkedin.com/in/brad-chapin/"><img class="social" src="assets/linkedin.png" alt="linkedin icon"></a>
+      <a target="_blank" href="https://www.linkedin.com/in/brad-chapin/"><img class="social" src="assets/linkedin.png" alt="linkedin icon"></a>
     </div>
 </body>
 </html>
