corrected typo on projects page

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
       <hr>
       <h4><a class="proj" href="http://pick-my-lunch.surge.sh">Pick My Lunch</a></h4>
     </div>
-    <p>Pick My Lunch is a seat-of-my-pants app I made for some folks who often have lunch together, but who can never decide what they want. For now, it's very simple- you type in a list of choices, and it picks on for you at random. I hope to improve it at some point to use an API call to find nearby places to eat, and pick from that list, saving the users even more time.</p>
+    <p>Pick My Lunch is a seat-of-my-pants app I made for some folks who often have lunch together, but who can never decide what they want. For now, it's very simple- you type in a list of choices, and it picks one for you at random. I hope to improve it at some point to use an API call to find nearby places to eat, and pick from that list, saving the users even more time.</p>
     <div>
       <hr>
       <h4><a href="http://handy-weather.surge.sh" class="proj">Handy Weather</a></h4>
